fixed tables overflow

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,10 +1,8 @@
 .app-wrapper {
-  height: 100vh;
   display: flex;
   flex-direction: column;
 
   .main-content-wrapper {
-    height: 100%;
     display: flex;
   }
 }
