--- a/src/styles/_completed-challenge.scss
+++ b/src/styles/_completed-challenge.scss
@@ -8,7 +8,7 @@
 
   .challenge-name {
     font-size: 1.2em;
-    color: #482487;
+    color: $app-purple;
   }
   .trophy-text {
     font-size: 1.5em;
