--- a/src/styles/_main-toolbar.scss
+++ b/src/styles/_main-toolbar.scss
@@ -1,6 +1,6 @@
 .main-toolbar {
   height: $main-toolbar-height;
-  background-color: #482487;
+  background-color: $app-purple;
   padding-left: 20px;
   display: flex;
   align-items: center;
