--- a/src/styles/_practice-menu.scss
+++ b/src/styles/_practice-menu.scss
@@ -2,6 +2,10 @@
   text-align: center;
   flex: 1;
   width: 100%;
+
+  h3 {
+    color: $app-purple;
+  }
 }
 
 .practice-menu-heading {
