--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,2 @@
 $main-toolbar-height: 100px;
+$app-purple: #482487;
